Adds tests for code that interacts with Mongo

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ env:
   - OASTATS_SETTINGS=pipeline.settings_test
 install:
   - pip install -r requirements.txt
+services:
+  - mongodb
 script: nosetests tests
