Add 2.6 to travis testing scenarios

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
 python:
+  - "2.6"
   - "2.7"
 env:
   - OASTATS_SETTINGS=pipeline.settings_test
 install:
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then pip install importlib unittest2; fi
   - pip install -r requirements.txt
 services:
   - mongodb
