--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 apachelog==1.0
 arrow==0.4.2
+geoip2==0.5.0
 httmock==1.2
+ipaddr==2.1.11
+maxminddb==0.3.1
 mongobox==0.1.3
 nose==1.3.0
 pycountry==1.3
-pygeoip==0.3.0
 pymongo==2.6.3
 python-dateutil==2.2
 requests==2.2.1
