--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 apachelog==1.0
 arrow==0.4.2
+futures==2.1.6
 geoip2==0.5.0
 httmock==1.2
 ipaddr==2.1.11
 maxminddb==0.3.1
 mongobox==0.1.3
 nose==1.3.0
-pycountry==1.3
+pycountry==1.8
 pymongo==2.6.3
+pysolr==3.2.0
 python-dateutil==2.2
 requests==2.2.1
 six==1.5.2
